# cbd-preventivi

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: build.yml
docs/: analisi_funzionale.md
docs/superpowers/specs/: 2026-05-15-client-changes-design.md  2026-05-15-riepilogo-view-design.md  2026-05-15-storico-preventivi-design.md  2026-05-15-storico-preventivi-plan.md
frontend/: index.html
scripts/: entry.py
src/cbd_preventivi/: __init__.py  calcoli.py  models.py
src/cbd_preventivi/api/: __init__.py  app.py  routes.py
src/cbd_preventivi/primus/: __init__.py  export.py  parser.py
tests/: test_export_primus.py  test_routes.py
